Neuer Gegnerwähler und UCI Schnittstelle

--- a/src/com/superschach/superschach/spiel/Ausgaben_de_DE.properties
+++ b/src/com/superschach/superschach/spiel/Ausgaben_de_DE.properties
@@ -1,4 +1,4 @@
-gegnerWaehlen=W‰hle deinen Gegner aus
+gegnerWaehlen=W‰hle die Gegner aus
 aktualisieren=Aktualisieren
 weiss=Weiﬂ
 schwarz=Schwarz
@@ -72,3 +72,6 @@ gegner_aufgeben=Der Gegner hat aufgegeben
 verbindungs_fehler=Die Verbindung wurde unterbrochen
 spiel_erstellen_fehlgeschlagen=Das Spiel konnte leider nicht gestartet werden
 logout=Ausloggen
+computerspieler=Lokaler Spieler
+herausfordern=Herausfordern
+waehlen=W‰hlen
