Server (nicht funktionabel hinzugefügt) Speichern der GUi funktioniert

--- a/src/com/superschach/superschach/spiel/Ausgaben_de_DE.properties
+++ b/src/com/superschach/superschach/spiel/Ausgaben_de_DE.properties
@@ -73,5 +73,8 @@ verbindungs_fehler=Die Verbindung wurde unterbrochen
 spiel_erstellen_fehlgeschlagen=Das Spiel konnte leider nicht gestartet werden
 logout=Ausloggen
 computerspieler=Lokaler Spieler
-herausfordern=Herausfordern
+herausfordern=Spiel starten
 waehlen=Wählen
+host=localhost
+pfadzu=Aufruf der UCI ChessEngine
+ucifehlstart=ChessEngine konnte nicht gestartet werden
